# tokamax

./: PR.md  README.md  cla-check  pyproject.toml  requirements.txt
tokamax/: __init__.py  autotuning.py  benchmarking.py  config.py  pyproject.toml  tokamax_test.py  tokamax_torch_test.py  torch.py
tokamax/_src/: ad.py  autotuning.py  autotuning_utils.py  autotuning_utils_test.py  batching.py  batching_test.py  benchmarking.py  benchmarking_test.py  config.py  conftest.py  gpu_utils.py  hlo_utils.py  hlo_utils_common.py  hlo_utils_test.py  jaxtyping.py  jaxtyping_test.py  mosaic_gpu.py  mosaic_gpu_test.py  mosaic_tpu.py  numerics.py  numerics_test.py  precision.py  precision_test.py  pydantic.py  pydantic_test.py  quantization.py  requirements.txt  serialization.py  serialization_test.py  shape.py  test_utils.py  triton.py  utils.py  version.py  xplane_pb2.py
tokamax/_src/autotuning/: __init__.py  api.py  api_test.py  arg_spec.py  arg_specs_common.py  autotuner.py  autotuning_utils.py  autotuning_utils_test.py  cache.py  cache_test.py
tokamax/_src/ops/: op.py  op_test.py
tokamax/_src/ops/attention/: api.py  api_sharding_test.py  api_test.py  arg_specs.py  autotune_arg_specs.py  base.py  base_test.py  bench.py  bench_arg_specs.py  jax_nn.py  jax_nn_test.py  pallas_mosaic_gpu.py  pallas_mosaic_gpu_common.py  pallas_mosaic_gpu_flash_attention.py  pallas_mosaic_gpu_flash_attention_test.py  pallas_mosaic_gpu_flash_attention_vjp.py  pallas_mosaic_gpu_kernel_sm100.py  pallas_mosaic_gpu_kernel_sm90.py  pallas_mosaic_gpu_test.py  pallas_mosaic_gpu_vjp.py  pallas_mosaic_gpu_vjp_common.py  pallas_mosaic_gpu_vjp_kernel_sm100.py  pallas_mosaic_gpu_vjp_kernel_sm90.py  pallas_mosaic_tpu.py  pallas_mosaic_tpu_common.py  pallas_mosaic_tpu_test.py  pallas_mosaic_tpu_vjp.py  pallas_triton.py  pallas_triton_flash_attention.py  pallas_triton_flash_attention_test.py  pallas_triton_flash_attention_vjp.py  pallas_triton_test.py  pallas_triton_vjp.py  test_base.py  xla_chunked.py  xla_chunked_test.py
tokamax/_src/ops/dot/: api.py  api_test.py  base.py  cutedsl.py  cutedsl_common.py  cutedsl_kernel_sm100.py  test_base.py
tokamax/_src/ops/flex_attention/: api.py  base.py  base_test.py  pallas_triton.py  pallas_triton_test.py  test_base.py  wrapper.py  wrapper_test_base.py
tokamax/_src/ops/gated_linear_unit/: api.py  api_test.py  base.py  base_test.py  pallas_mosaic_gpu.py  pallas_mosaic_gpu_common.py  pallas_mosaic_gpu_kernel_sm100.py  pallas_mosaic_gpu_kernel_sm90.py  pallas_mosaic_gpu_test.py  pallas_triton.py  pallas_triton_test.py  test_base.py
tokamax/_src/ops/kda/: __init__.py  api.py  api_test.py  base.py
tokamax/_src/ops/linear_softmax_cross_entropy_loss/: api.py  api_test.py  arg_specs.py  base.py  base_test.py  chunked_xla.py  chunked_xla_test.py  pallas_mosaic_gpu.py  pallas_mosaic_gpu_common.py  pallas_mosaic_gpu_kernel_sm90.py  pallas_mosaic_gpu_kernel_sm90_test.py  pallas_mosaic_gpu_test.py  pallas_mosaic_tpu.py  pallas_mosaic_tpu_kernel.py  pallas_mosaic_tpu_kernel_test.py  pallas_mosaic_tpu_test.py  pallas_triton.py  pallas_triton_config.py  pallas_triton_kernel.py  pallas_triton_kernel_test.py  pallas_triton_test.py  reference.py  test_utils.py  torch_api.py
tokamax/_src/ops/matmul/: api.py  api_test.py  base.py  cute_dsl.py  cute_dsl_common.py  cute_dsl_kernel_sm100.py  test_base.py
tokamax/_src/ops/normalization/: api.py  api_test.py  base.py  bench.py  jax_triton.py  jax_triton_test.py  pallas_triton.py  pallas_triton_config.py  pallas_triton_test.py  pallas_triton_vjp.py  pallas_triton_vjp_config.py  test_base.py  triton_config.py  triton_vjp_config.py
tokamax/_src/ops/ragged_dot/: api.py  api_test.py  arg_specs.py  autotune_arg_specs.py  base.py  base_test.py  bench.py  bench_arg_specs.py  pallas_mosaic_gpu.py  pallas_mosaic_gpu_common.py  pallas_mosaic_gpu_common_test.py  pallas_mosaic_gpu_kernel_sm100.py  pallas_mosaic_gpu_kernel_sm100_fp8_quant.py  pallas_mosaic_gpu_kernel_sm100_fp8_quant_test.py  pallas_mosaic_gpu_kernel_sm100_i8_quant.py  pallas_mosaic_gpu_kernel_sm100_i8_quant_test.py  pallas_mosaic_gpu_kernel_sm100_quant.py  pallas_mosaic_gpu_kernel_sm100_quant_i8.py  pallas_mosaic_gpu_kernel_sm100_quant_i8_test.py  pallas_mosaic_gpu_kernel_sm100_quant_post_scale.py  pallas_mosaic_gpu_kernel_sm90.py  pallas_mosaic_gpu_kernel_sm90_quant.py  pallas_mosaic_gpu_kernel_sm90_quant_async_store.py  pallas_mosaic_gpu_kernel_sm90_quant_ws.py  pallas_mosaic_gpu_kernel_sm90_quant_ws_async_store.py  pallas_mosaic_gpu_non_quant_kernel.py  pallas_mosaic_gpu_quant_kernel.py  pallas_mosaic_gpu_quant_kernel_blackwell.py  pallas_mosaic_gpu_quant_ws_async_store_kernel.py  pallas_mosaic_gpu_quant_ws_kernel.py  pallas_mosaic_gpu_test.py  pallas_mosaic_tpu.py  pallas_mosaic_tpu_kernel.py  pallas_mosaic_tpu_test.py  pallas_mosaic_tpu_v2.py  pallas_mosaic_tpu_v2_gmm_kernel.py  pallas_mosaic_tpu_v2_kernel_test.py  pallas_mosaic_tpu_v2_test.py  pallas_mosaic_tpu_v2_tgmm_kernel.py  pallas_triton.py  (+2 more)
tokamax/_src/ops/ragged_gather/: __init__.py  api.py  api_test.py  arg_specs.py  base.py  base_test.py  pallas_mosaic_tpu.py  pallas_mosaic_tpu_kernel.py  pallas_mosaic_tpu_kernel_test.py  pallas_mosaic_tpu_test.py  pallas_mosaic_v2_tpu.py  pallas_mosaic_v2_tpu_kernel.py  pallas_mosaic_v2_tpu_kernel_test.py  pallas_mosaic_v2_tpu_test.py
tokamax/_src/ops/ragged_gather_reduce/: __init__.py  api.py  arg_specs.py  base.py  base_test.py  pallas_mosaic_tpu.py  pallas_mosaic_tpu_kernel.py  pallas_mosaic_tpu_test.py  pallas_mosaic_v2_tpu.py  pallas_mosaic_v2_tpu_kernel.py  pallas_mosaic_v2_tpu_test.py
tokamax/_src/ops/ragged_scatter/: __init__.py  api.py  arg_specs.py  base.py  base_test.py  (+3 more)
tokamax/_src/pallas/: block.py  block_test.py  grid.py  local_fuser.py
tokamax/_src/tools/: xplane_to_bound_args.py
tokamax/benchmarking/: attention.py  benchmark_registry.pbtxt
tokamax/benchmarks/: attention.py  benchmark_registry.pbtxt  common.py  linear_softmax_cross_entropy_loss.py  mla.py  ragged_dot.py  triangle_multiplication.py
tokamax/data/autotuning/: pallas_triton_normalization.json
(+157 files in other folders)
