[project]
name = "tokamax"
# ... other authors ...
description = "A Pallas Custom Kernel Library."
readme = "README.md"
version = "0.0.10"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.0",
    "einshape",
    "jax>=0.4.31",
    "jaxlib>=0.4.31",
    "jaxtyping>=0.3",
    "pydantic>=2.11.0",
    "qwix>=0.1.2",
    "tqdm",
    "typing_extensions>=4.5.0",
    "typeguard==2.13.3",
    "immutabledict",
    "tensorboardx",
    "cuequivariance>=0.8.1", # Updated
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tokamax = ["data/autotuning/*/*.json"]

[project.optional-dependencies]
test = [
    "chex>=0.1.91",
    "flatbuffers",
    "flax",
    "pytest-xdist",
    "pytest",
    "xprof",
]

bench = [
    "tokamax[cuda]",
    "google-benchmark>=1.9.0",
    "xprof",
    "cuequivariance-jax>=0.8.1", # Updated
    "jax-triton>=0.3.0", # Pin to the latest available version
    "triton>=3.0.0", # Updated
]

cuda = [
    "jax[cuda13_pip]>=0.4.31", # Ensures JAX is built with CUDA 13 support
]

tpu = [
    "jax[tpu]>=0.4.31",
    "hypothesis",
]

[tool.pytest.ini_options]
markers = ["long: tests that will take a long time to run and are used in weekly runs"]
