[project]
name = "tokamax"
authors = [
  {name = "Ani Udipi", email = "udipi@google.com"},
  {name = "Chris Jones", email = "cjfj@google.com"},
  {name = "Christos Perivolaropoulos", email = "cperivol@google.com"},
  {name = "Giorgio Arena", email = "giorgioa@google.com"},
  {name = "Gleb Pobudzey", email = "pobudzey@google.com"},
  {name = "Robert Dyro", email = "rdyro@google.com"},
  {name = "Sebastian Bodenstein", email = "sbodenstein@google.com"},
  {name = "Selim Seferbekov", email = "selimsef@google.com"},
  {name = "Stanley Tzeng", email = "stzeng@google.com"},
  {name = "Niyati Chaudhary", email = "niyatic@google.com"},
]

description = "A Pallas Custom Kernel Library."
readme = "README.md"
version = "0.0.10"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.0",
    "einshape",
    "jax>=0.6.0,<0.8.0",       # DOWNGRADE: Pin to 0.7.x (Goldilocks zone)
    "jaxlib>=0.6.0,<0.8.0",    # DOWNGRADE: Pin to 0.7.x
    "jaxtyping>=0.3",
    "pydantic>=2.11.0",
    "qwix>=0.1.2",
    "tqdm",
    "typing_extensions>=4.5.0",
    "typeguard==2.13.3",
    "immutabledict",
    "tensorboardx",
    "cuequivariance>=0.8.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tokamax = ["data/autotuning/*/*.json"]

[project.optional-dependencies]
test = [
    "chex>=0.1.91",
    "flatbuffers",
    "flax",
    "pytest-xdist",
    "pytest",
    "xprof",
]

bench = [
    "google-benchmark>=1.9.0",
    "xprof",
    "cuequivariance-jax>=0.8.1",
]

cuda = [
    "jax[cuda13]",                         # Use CUDA 13 wheels (Compatible with JAX 0.7.x)
    "nvidia-cudnn-cu12>=9.0.0",
    "jax-triton>=0.3.0",                   # Required for Triton kernel
    "triton>=3.0.0",                       # Required for Triton kernel
    "cuequivariance-ops-cu12>=0.8.1",      # The actual kernel ops
    "cuequivariance-ops-jax-cu12>=0.8.1",  # The JAX bindings
]

tpu = [
    "jax[tpu]",
    "hypothesis",
]

[tool.pytest.ini_options]
markers = ["long: tests that will take a long time to run and are used in weekly runs"]
