[project]
name = "tokamax"
authors = [{ name = "Sebastian Bodenstein", email = "sbodenstein@google.com" }, {name = "Chris Jones", email = "cjfj@google.com" }]
maintainers = [{ name = "Stanley Tzeng", email = "stzeng@google.com" }, {name = " Ani Udipi", email = "udipi@google.com" }]
description = "A Pallas Custom Kernel Library."
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "absl-py>=3.0",
  "jax>=0.4.24",
  "jaxlib>=0.4.24",
  "chex>=0.1.81",
  "triton>=3.0.0",
  "nvidia-cudnn-cu12>=9.0.0",
  "jax[cuda12]>=0.4.0",
  "jax[tpu]>= 0.4.0",
]
